Fix hero background on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -229,6 +229,9 @@ a {
   .stepper {
     display: none;
   }
+  .hero {
+    background-size: contain;
+  }
 }
 
 /* LOFI DESIGNS */
